# locale-lib

./: .gitignore  README.md  pyproject.toml
locale-lib/: __init__.py
localelib/: __init__.py
