[tool.poetry]
name = "localelib"
version = "2.0.0"
description = "Simple lib for localisation your services."
authors = ["cabup <spamgate1945@gmail.com>"]
license = "GPLv3+"
readme = "README.md"
packages = [
    {include="localelib"}
]
[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
